--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,8 +12,20 @@ jobs:
         with: {gradle-version: '8.5', cache-disabled: true}
       - name: Build
         run: |
-          find . -name "app" -type d | head -n 1 | xargs dirname | xargs cd
+          cd $(find . -type d -name "app" | head -n 1)/..
           echo "android.useAndroidX=true" > gradle.properties
+          cat <<EOF > settings.gradle.kts
+          pluginManagement {
+              repositories { google(); mavenCentral(); gradlePluginPortal() }
+          }
+          dependencyResolutionManagement {
+              repositoriesMode.set(RepositoriesMode.FAIL_ON_PROJECT_REPOS)
+              repositories { google(); mavenCentral() }
+          }
+          rootProject.name = "TheBeatAndroid"
+          include(":app")
+          EOF
+          chmod +x gradlew || true
           gradle assembleDebug --no-daemon
       - uses: actions/upload-artifact@v4
         with: {name: 'TheBeat-App', path: '**/*.apk'}
